# GordonVita004

./: .gitignore  CMakeLists.txt  GVITAV004_LOCK_SAFE.vpk  GVITAV004_LOCK_UNSAFE_MAXVOL_MAXDISPLAY.vpk  GVITAV004_NOLOCK.vpk  README.md  build
sce_sys/livearea/contents/: template.xml
src/: main.cpp
